force-app/main/default/objects/GWB_Plant_Function__c/GWB_Plant_Function__c.object-meta.xml
<CustomObject>
    <label>Plant Function</label>
    <nameField>
        <label>Function Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Functions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>