force-app/main/default/objects/GWB_Plant_Function__c/fields/Auth_Positions__c.field-meta.xml
<CustomField>
    <fullName>Auth_Positions__c</fullName>
    <label>Authorized Positions</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>