force-app/main/default/objects/GWB_Plant_Function__c/fields/Current_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Current_Headcount__c</fullName>
    <label>Current Headcount</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>