force-app/main/default/objects/GWB_Plant_Function__c/fields/Plant_Shop__c.field-meta.xml
<CustomField>
    <fullName>Plant_Shop__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plant Shop</label>
    <referenceTo>GWB_Plant_Shop__c</referenceTo>
    <relationshipLabel>Plant Functions</relationshipLabel>
    <relationshipName>Plant_Functions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>