force-app/main/default/objects/GWB_Plant_Function__c/fields/Shift_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Shift_Pattern__c</fullName>
    <label>Shift Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Shift</fullName>
            </value>
            <value>
                <fullName>2-Shift</fullName>
            </value>
            <value>
                <fullName>3-Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>