force-app/main/default/objects/GWB_Plant_Function__c/listViews/All_Functions.listView-meta.xml
<ListView>
    <fullName>All_Functions</fullName>
    <label>All Functions</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Plant_Shop__c</columns>
    <columns>Station__c</columns>
    <columns>Auth_Positions__c</columns>
    <columns>Current_Headcount__c</columns>
    <columns>Shift_Pattern__c</columns>
    <columns>Active__c</columns>
    <sharedTo><allInternalUsers/></sharedTo>
</ListView>